crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	int32_t capacity;
	int32_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
// Continuation callback for UniFFI Futures
typedef void (*RustFutureContinuation)(void * , int8_t);
void* uniffi_servicepoint_binding_uniffi_fn_method_chargrid_to_cp437(
	void* ptr,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_command(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear(
	uint64_t offset,
	void* bitmap,
	RustBuffer compression,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and(
	uint64_t offset,
	void* bitmap,
	RustBuffer compression,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or(
	uint64_t offset,
	void* bitmap,
	RustBuffer compression,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win(
	uint64_t offset_x,
	uint64_t offset_y,
	void* bitmap,
	RustBuffer compression,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor(
	uint64_t offset,
	void* bitmap,
	RustBuffer compression,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness(
	uint8_t brightness,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness(
	uint64_t offset_x,
	uint64_t offset_y,
	void* grid,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear(
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data(
	uint64_t offset_x,
	uint64_t offset_y,
	void* grid,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out(
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset(
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_command_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_connection(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new(
	RustBuffer host,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake(
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_connection_send(
	void* ptr,
	void* command,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_free_cp437grid(
	void* ptr,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone(
	void* other,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load(
	uint64_t width,
	uint64_t height,
	RustBuffer data,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new(
	uint64_t width,
	uint64_t height,
	RustCallStatus* out_status
);
RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw(
	void* ptr,
	RustCallStatus* out_status
);
int8_t uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals(
	void* ptr,
	void* other,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill(
	void* ptr,
	uint8_t value,
	RustCallStatus* out_status
);
uint8_t uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_get(
	void* ptr,
	uint64_t x,
	uint64_t y,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_height(
	void* ptr,
	RustCallStatus* out_status
);
void uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_set(
	void* ptr,
	uint64_t x,
	uint64_t y,
	uint8_t value,
	RustCallStatus* out_status
);
void* uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_to_utf8(
	void* ptr,
	RustCallStatus* out_status
);
uint64_t uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_width(
	void* ptr,
	RustCallStatus* out_status
);
RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_alloc(
	int32_t size,
	RustCallStatus* out_status
);
RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_from_bytes(
	ForeignBytes bytes,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rustbuffer_free(
	RustBuffer buf,
	RustCallStatus* out_status
);
RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_reserve(
	RustBuffer buf,
	int32_t additional,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_continuation_callback_set(
	RustFutureContinuation callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_u8(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_u8(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_u8(
	void* handle,
	RustCallStatus* out_status
);
uint8_t ffi_servicepoint_binding_uniffi_rust_future_complete_u8(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_i8(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_i8(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_i8(
	void* handle,
	RustCallStatus* out_status
);
int8_t ffi_servicepoint_binding_uniffi_rust_future_complete_i8(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_u16(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_u16(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_u16(
	void* handle,
	RustCallStatus* out_status
);
uint16_t ffi_servicepoint_binding_uniffi_rust_future_complete_u16(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_i16(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_i16(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_i16(
	void* handle,
	RustCallStatus* out_status
);
int16_t ffi_servicepoint_binding_uniffi_rust_future_complete_i16(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_u32(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_u32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_u32(
	void* handle,
	RustCallStatus* out_status
);