crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint/servicepoint_binding_uniffi.cs


    [DllImport("servicepoint_binding_uniffi")]
    public static extern Cp437GridSafeHandle uniffi_servicepoint_binding_uniffi_fn_method_chargrid_to_cp437(CharGridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ulong uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width(CharGridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_free_command(
    IntPtr ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear(ulong @offset,BitVecSafeHandle @bitmap,RustBuffer @compression,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and(ulong @offset,BitVecSafeHandle @bitmap,RustBuffer @compression,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or(ulong @offset,BitVecSafeHandle @bitmap,RustBuffer @compression,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win(ulong @offsetX,ulong @offsetY,BitmapSafeHandle @bitmap,RustBuffer @compression,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor(ulong @offset,BitVecSafeHandle @bitmap,RustBuffer @compression,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness(byte @brightness,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness(ulong @offsetX,ulong @offsetY,BrightnessGridSafeHandle @grid,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear(ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone(CommandSafeHandle @other,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data(ulong @offsetX,ulong @offsetY,Cp437GridSafeHandle @grid,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out(ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset(ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CommandSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_command_utf8_data(ulong @offsetX,ulong @offsetY,CharGridSafeHandle @grid,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern sbyte uniffi_servicepoint_binding_uniffi_fn_method_command_equals(CommandSafeHandle @ptr,CommandSafeHandle @other,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_free_connection(
    IntPtr ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ConnectionSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new(RustBuffer @host,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ConnectionSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake(ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_method_connection_send(ConnectionSafeHandle @ptr,CommandSafeHandle @command,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_free_cp437grid(
    IntPtr ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern Cp437GridSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone(Cp437GridSafeHandle @other,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern Cp437GridSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load(ulong @width,ulong @height,RustBuffer @data,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern Cp437GridSafeHandle uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new(ulong @width,ulong @height,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw(Cp437GridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern sbyte uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals(Cp437GridSafeHandle @ptr,Cp437GridSafeHandle @other,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill(Cp437GridSafeHandle @ptr,byte @value,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern byte uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_get(Cp437GridSafeHandle @ptr,ulong @x,ulong @y,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ulong uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_height(Cp437GridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_set(Cp437GridSafeHandle @ptr,ulong @x,ulong @y,byte @value,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern CharGridSafeHandle uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_to_utf8(Cp437GridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ulong uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_width(Cp437GridSafeHandle @ptr,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer uniffi_servicepoint_binding_uniffi_fn_func_get_constants(ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_alloc(int @size,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_from_bytes(ForeignBytes @bytes,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rustbuffer_free(RustBuffer @buf,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_reserve(RustBuffer @buf,int @additional,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_continuation_callback_set(IntPtr @callback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_u8(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_u8(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_u8(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern byte ffi_servicepoint_binding_uniffi_rust_future_complete_u8(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_i8(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_i8(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_i8(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern sbyte ffi_servicepoint_binding_uniffi_rust_future_complete_i8(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_u16(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_u16(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_u16(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort ffi_servicepoint_binding_uniffi_rust_future_complete_u16(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_i16(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_i16(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_i16(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern short ffi_servicepoint_binding_uniffi_rust_future_complete_i16(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_u32(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_u32(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_u32(IntPtr @handle
    );
